<resources>
    <string name="app_name">udomi.ba</string>
    <string name="description">Opis ljubimca</string>
    <string name="gender">Spol</string>
    <string name="vaccinated">Vakcinacija</string>
    <string name="birthdate">Datum rođenja ljubimca \n(ako niste sigurni, stavite približan datum)</string>
    <string name="adopt">Udomi!</string>
    <string name="unesimail">Unesite e-mail</string>
    <string name="unesiloz">Unesite lozinku</string>
    <string name="ponoloz">Ponovo unesite lozinku</string>
    <string name="unesibroj">Unesite broj telefona</string>
    <string name="registrujse">Registruj se</string>
    <string name="prijavise">Prijavi se</string>

    <string name="home">Početna</string>
    <string name="mypets">Moji ljubimci</string>
    <string name="missingpets">Nestali ljubimci</string>
    <string name="add">Dodaj ljubimca</string>
    <string name="edit_pet">Uredi</string>
    <string name="add_missing">Prijavi nestalog ljubimca</string>
    <string name="add_name">Ime ljubimca</string>
    <string name="add_description">Vaš opis ljubimca</string>
    <string name="add_birthdate">Datum rođenja</string>
    <string name="add_photo">Dodajte sliku!</string>
    <string name="edit_photo">Zamijenite sliku</string>
    <string name="add_location">Lokacija ljubimca</string>
    <string name="male">Mužjak</string>
    <string name="female">Ženka</string>
    <string name="vaccinated_yes">Vakcinisano</string>
    <string name="vaccinated_no">Nije vakcinisano</string>
    <string name="save_changes">Spasi promjene</string>
    <string name="cancel">Odustani</string>
    <string name="edit_location">Promijenite lokaciju</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search">Pretraži</string>
    <string name="datum">Datum rođenja</string>
    <string name="lokacija">Lokacija</string>

    <string-array name="species">
        <item>Pas</item>
        <item>Mačka</item>
        <item>Ptica</item>
        <item>Zec</item>
        <item>Hrčak</item>
    </string-array>
</resources>