<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPet">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"

        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHighlight="@color/lepazelena"

        android:textColorLink="@color/lepazelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"

        android:inputType="textPersonName"
        android:minHeight="48dp"

        android:textColorLink="@color/lepazelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <RadioGroup
        android:id="@+id/radioGroupVaccinated"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender">

        <RadioButton
            android:id="@+id/vaccinated_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/udomi_zuta"
            android:text="@string/vaccinated_yes" />

        <RadioButton
            android:id="@+id/notvaccinated_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/udomi_zuta"
            android:text="@string/vaccinated_no" />
    </RadioGroup>

    <TextView
        android:id="@+id/edit_birthdate_text"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/add_birthdate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_description" />

    <TextView
        android:id="@+id/edit_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/edit_photo"
        android:textColor="#6D4305"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_location_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupVaccinated" />

    <TextView
        android:id="@+id/edit_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/edit_location"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_image_text"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupVaccinated" />

    <ImageButton
        android:id="@+id/edit_location_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/edit_location_text"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <Button
        android:id="@+id/save_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_location_button" />

    <Button
        android:id="@+id/edit_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/udomi_crvena"
        android:onClick="goBack"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/save_edit_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />


    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/udomi_zuta"
        android:onClick="openDatePicker"

        android:textColor="@color/udomi_zuta"
        app:layout_constraintStart_toEndOf="@+id/edit_birthdate_text"
        app:layout_constraintTop_toBottomOf="@+id/edit_description" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_birthdate_text">

        <RadioButton
            android:id="@+id/male_radio_button"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/udomi_zuta"
            android:text="@string/male"
            app:useMaterialThemeColors="false" />

        <RadioButton
            android:id="@+id/female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/udomi_zuta"
            android:text="@string/female" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/edit_location_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_image_text"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

</androidx.constraintlayout.widget.ConstraintLayout>